[tool.poetry]
name = "metassl"
version = "0.1.0"
description = ""
authors = ["diane-wagner <wagnerd@informatik.uni-freiburg.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jsonargparse = "3.19.4"
torch = "^1.11.0"
torchvision = "^0.12.0"
tensorboard = "^2.8.0"
matplotlib = "^3.5.1"
tqdm = "^4.63.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
