[tool.poetry]
name = "metassl"
version = "0.1.0"
description = ""
authors = ["diane-wagner <wagnerd@informatik.uni-freiburg.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7.1"
jsonargparse = "3.19.4"
torch = "^1.11.0"
torchvision = "^0.12.0"
tensorboard = "^2.8.0"
matplotlib = "^3.5.1"
tqdm = "^4.63.1"
black = "^22.1.0"
pre-commit = "^2.17.0"
neps = {git = "https://github.com/automl/neps.git", rev = "v0.4.5"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
profile = 'black'
line_length = 100
